[gd_scene load_steps=5 format=3 uid="uid://bono4mu6juvo8"]

[ext_resource type="Script" path="res://Scripts/Levels/HUD.gd" id="1_no1ya"]
[ext_resource type="FontFile" uid="uid://dycfyvuoxfwc0" path="res://Sprites/font1.png" id="2_doi0m"]
[ext_resource type="PackedScene" uid="uid://nbd34bkxryjd" path="res://Objects/Bar.tscn" id="3_y64wl"]

[sub_resource type="LabelSettings" id="LabelSettings_ke5ce"]
line_spacing = 0.0

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_no1ya")

[node name="BgRect" type="ColorRect" parent="."]
offset_right = 256.0
offset_bottom = 48.0
color = Color(0, 0, 0, 1)

[node name="PlayerCharacter" type="Node2D" parent="."]
position = Vector2(8, 24)

[node name="CharacterName" type="Label" parent="PlayerCharacter"]
offset_right = 104.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("2_doi0m")
text = "player"
label_settings = SubResource("LabelSettings_ke5ce")
uppercase = true

[node name="PowerLife" type="Label" parent="PlayerCharacter"]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("2_doi0m")
text = "power
life"
label_settings = SubResource("LabelSettings_ke5ce")
uppercase = true

[node name="Power" parent="PlayerCharacter" instance=ExtResource("3_y64wl")]
offset_left = 56.0
offset_top = 8.0
offset_right = 137.0
offset_bottom = 16.0
scale = Vector2(1, 1)
width = 6

[node name="Life" parent="PlayerCharacter" instance=ExtResource("3_y64wl")]
offset_left = 56.0
offset_top = 16.0
offset_right = 137.0
offset_bottom = 24.0
scale = Vector2(1, 1)
width = 6
color2 = Color(0.709804, 0.188235, 0.12549, 1)

[node name="ScoreMeter" type="Label" parent="PlayerCharacter"]
offset_left = 88.0
offset_right = 152.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("2_doi0m")
text = "0"
label_settings = SubResource("LabelSettings_ke5ce")
horizontal_alignment = 2
uppercase = true

[node name="Level" type="Label" parent="PlayerCharacter"]
clip_children = 2
offset_left = 168.0
offset_right = 232.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("2_doi0m")
text = "level 01"
label_settings = SubResource("LabelSettings_ke5ce")
uppercase = true

[node name="Bar" parent="PlayerCharacter/Level" instance=ExtResource("3_y64wl")]
offset_right = 64.0
style = 1
width = 100
initial_value = 30

[node name="Style1" parent="PlayerCharacter/Level/Bar" index="0"]
visible = false

[node name="Style2" parent="PlayerCharacter/Level/Bar" index="1"]
visible = true
offset_right = 81.0

[node name="BarBG" parent="PlayerCharacter/Level/Bar/Style2" index="0"]
offset_top = 5.96046e-08
offset_right = 64.0
offset_bottom = 8.0

[node name="BarColor" parent="PlayerCharacter/Level/Bar/Style2" index="1"]
offset_top = 0.0
offset_right = 19.2
offset_bottom = 8.0

[node name="BossCharacter" type="Node2D" parent="."]
visible = false
position = Vector2(8, 48)

[node name="CharacterName" type="Label" parent="BossCharacter"]
offset_right = 150.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("2_doi0m")
text = "boss"
label_settings = SubResource("LabelSettings_ke5ce")
uppercase = true

[node name="PowerLife" type="Label" parent="BossCharacter"]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("2_doi0m")
text = "power
life"
label_settings = SubResource("LabelSettings_ke5ce")
uppercase = true

[node name="Power" parent="BossCharacter" instance=ExtResource("3_y64wl")]
offset_left = 56.0
offset_top = 8.0
offset_right = 137.0
offset_bottom = 16.0

[node name="Life" parent="BossCharacter" instance=ExtResource("3_y64wl")]
offset_left = 56.0
offset_top = 16.0
offset_right = 137.0
offset_bottom = 24.0

[node name="TimerText" type="Label" parent="BossCharacter"]
offset_left = 88.0
offset_right = 152.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("2_doi0m")
text = "60"
label_settings = SubResource("LabelSettings_ke5ce")
horizontal_alignment = 2
uppercase = true

[node name="BgRect2" type="ColorRect" parent="BossCharacter"]
offset_left = -8.0
offset_top = 24.0
offset_right = 248.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="BossCharacter"]

[editable path="PlayerCharacter/Level/Bar"]
